name:                elm-html-defaults
version:             0.1.0.0
synopsis:            Automatically generate convenient elm-html shortcuts
description:         Please see README.md
homepage:            http://github.com/parsonsmatt/elm-html-defaults#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Parsons
maintainer:          parsonsmatt@gmail.com
copyright:           Matt Parsons
category:            Code Generation
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable elm-html-gen
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.8 && < 5
                     , text
                     , turtle >= 1.2.2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/parsonsmatt/elm-html-defaults
